# SeaMotions

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DISCLAIMER  README.md
aux_tools/: base_integrals.py  check_time_domain_db.py  compare_results.py  create_gauss_points_module.py  fit_cheby.py  fit_cheby_v2.py  fit_functions.py  fit_results.py  fit_tools.py  fit_wave_findepth.py  fit_wave_infdepth.py  fit_wave_infdepth_v2.py  generate_findepth_coeffs_mod.py  generate_infdepth_coeffs_mod.py  generate_infdepth_coeffs_mod_v2.py  generate_infdepth_coeffs_mod_v3.py  generate_infdepth_coeffs_time.py  generate_integrals_database.py  generate_integrals_database_check.py  generate_integrals_database_time_inf.py  generate_integrals_database_v2.py  generate_test_data.py  test_shape_fcn.py  time_domain_algorithms_backup.py
cmake/modules/: AuxTools.cmake  GenerateCoeffsHeader.cmake  GetGitRevisionDescription.cmake  ModuleFiles.cmake  version.cpp.in
docs/: theory_manual.docx
examples/_cube/: compare_raos.py
src/: chebyshev.cpp  chebyshev.hpp  cli_header_banner.hpp  config.cpp  config.hpp  containers.hpp  gauss.cpp  gauss.hpp  header_banner.hpp  hydrostatics.cpp  hydrostatics.hpp  initial_stability.hpp  initial_stability.txx  main.cpp  math_interface.hpp  math_tools.cpp  math_tools.hpp  math_tools.txx  mpi_interface.hpp  seamotions_freq.cpp  special_math.cpp  special_math.hpp  static_tools.hpp  tools.cpp  tools.hpp  tools.txx  version.cpp  version.hpp  waves.cpp  waves.hpp
src/containers/: body_def.cpp  body_def.hpp  containers.hpp  initial_stability.hpp  initial_stability.txx  load_condition.cpp  load_condition.hpp  logger.cpp  logger.hpp  matlin_group.hpp  mpi_config.cpp  mpi_config.hpp  mpi_timer.hpp  panel_data.hpp  panel_data.txx  panel_geom.cpp  panel_geom.hpp  panel_geom.txx  panel_geom_list.hpp  panel_geom_t.hpp  panel_geom_t.txx  performance_stats.cpp  performance_stats.hpp  rad_diff_data.cpp  rad_diff_data.hpp  rad_diff_data.txx  rad_diff_data_config.hpp  simulation_data.cpp  simulation_data.hpp  source_node.cpp  source_node.hpp
src/green/: chebyshev_evaluator_base.hpp  chebyshev_evaluator_interface.hpp  chebyshev_inf_depth.hpp  chebyshev_traits.hpp  chebyshev_traits_macros.hpp  common.cpp  common.hpp  dipole.cpp  dipole.hpp  fd_coeffs_files.hpp  fit_chebyshev_inf_depth.cpp  integrals_database.hpp  integrals_db.cpp  integrals_db.hpp  kochin.cpp  kochin.hpp  pulsating.cpp  pulsating.hpp  pulsating_fin_depth.cpp  pulsating_fin_depth.hpp  pulsating_fin_depth.txx  pulsating_fin_depth_cheby.cpp  pulsating_fin_depth_cheby.hpp  pulsating_fin_depth_v2.cpp  pulsating_fin_depth_v2.hpp  pulsating_fin_depth_v2.txx  pulsating_inf_depth.cpp  pulsating_inf_depth.hpp  pulsating_inf_depth_cheby.cpp  pulsating_inf_depth_cheby.hpp  pulsating_inf_depth_series.cpp  pulsating_inf_depth_series.hpp  source.cpp  source.hpp  source.txx
src/green_interfaces/: gwf_interface.cpp  gwf_interface.hpp  gwfdn_interface.cpp  gwfdn_interface.hpp
src/hydrostatics/: hydrostatics.cpp  hydrostatics.hpp
src/inout/: input.cpp  input.hpp  output.cpp  output.hpp  reader.cpp  reader.hpp  reader.txx  vtu.cpp  vtu.hpp
src/interfaces/: grf_interface.cpp  grf_interface.hpp  grfdn_interface.cpp  grfdn_interface.hpp  grfdx_interface.cpp  grfdx_interface.hpp  grfdy_interface.cpp  grfdy_interface.hpp  grfdz_interface.cpp  grfdz_interface.hpp  gwf_interface.cpp  gwf_interface.hpp  gwfcns_interface_t.hpp  gwfcns_interface_t.txx  gwfdn_interface.cpp  gwfdn_interface.hpp  gwfdn_interface_t.hpp  gwfdn_interface_t.txx  gwfdx_interface.cpp  gwfdx_interface.hpp  gwfdy_interface.cpp  gwfdy_interface.hpp  gwfdz_interface.cpp  gwfdz_interface.hpp  hmf_interface.cpp  hmf_interface.hpp  hydrostatic_force_interface.hpp  kochin_interface.cpp  kochin_interface.hpp  stab_interface_t.hpp  stab_interface_t.txx
src/math/: bessel_factory.hpp  chebyshev.cpp  chebyshev.hpp  chebyshev.txx  chebyshev_evaluation.hpp  cusvector.hpp  cusvector.txx  euler_rotations.hpp  euler_transforms.cpp  euler_transforms.hpp  euler_transforms.txx  gauss.cpp  gauss.hpp  gauss_t.hpp  integration.cpp  (+21 more)
tests/: CMakeLists.txt  containers.hpp  test_dispersion_relation.cpp  test_hydrostatics.cpp  test_intel_compiler_version.cpp
tests/_temp/: CMakeLists.txt  matrix_vector_mult.cpp  test_heap_memory.cpp  test_heap_memory_2.cpp  test_heap_memory_performance.cpp  test_norm.cpp  vector_performance.cpp
tests/containers/: CMakeLists.txt  test_inside_polygon.cpp
tests/green/: CMakeLists.txt  fit_chebyshev_inf_depth.cpp  performance_hess_vs_newman.cpp  potential_panel_quad_src.cpp  test_chebyshev_integraldb.cpp  test_dipole_potential.cpp  test_green_r_zero.cpp  test_integrals_database.cpp  test_integrals_performance.cpp  test_multipole_expansions.cpp  test_panel_geometries.cpp  test_panel_geometries.hpp  test_pulsating_inf_depth_romberg.cpp  test_quad_green_element.cpp  test_source_potential.cpp  test_source_velocity.cpp  test_steady_analytic_panels.cpp  test_velocity_integration.cpp  test_wave_term_fin_depth.cpp  test_wave_term_fin_depth_integrals.cpp  test_wave_term_fin_depth_v2.cpp  test_wave_term_inf_depth.cpp  test_wave_term_inf_depth_series.cpp  test_wave_term_john_quad.cpp
tests/inout/: CMakeLists.txt  test_input.cpp
tests/mpi/: CMakeLists.txt  test_avg_scatter_gather.cpp  test_broadcast.cpp  test_mpi_build.cpp  test_scatter.cpp  test_send_recv.cpp  test_status_probe.cpp
tests/tests_data/: plane_z_m10.poly  square_elems_mesh.poly  triangle_elems_mesh.poly
tests/tests_data/hydrostatics/: dike_mesh.poly
tests/tools/: CMakeLists.txt  test_adaptive_quadrature.cpp  test_bessel_functions.cpp  test_bisection.cpp  test_chebyshev_poly.cpp  test_chebyshev_roots.cpp  test_complex_integration.cpp  test_cross_product.cpp  test_cusvector.cpp  test_expint.cpp  test_factorial.cpp  test_haar_quad.cpp  test_legendre_poly.cpp  test_nonlinear_1d_solvers.cpp  test_panel_properties.cpp  test_performance_aux_bessel.cpp  test_psi_function.cpp  test_quadrature_2d.cpp  test_refine_element.cpp  test_romberg.cpp  test_scalapack.cpp  test_sign.cpp  test_vector_arithmetics.cpp
(+218 files in other folders)
